--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native": "0.67.2",
     "react-native-dotenv": "^3.3.1",
     "react-native-gesture-handler": "^2.2.0",
+    "react-native-maps": "0.30.1",
     "react-native-reanimated": "^2.4.1",
     "react-native-safe-area-context": "^3.4.1",
     "react-native-safe-area-view": "^1.1.1",
