--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@fawazahmed/react-native-read-more": "^2.3.3",
     "@hookform/resolvers": "^2.8.8",
     "@react-native-async-storage/async-storage": "^1.16.1",
     "@react-navigation/drawer": "^6.3.1",
@@ -29,7 +30,9 @@
     "react-native-safe-area-context": "^3.4.1",
     "react-native-safe-area-view": "^1.1.1",
     "react-native-screens": "^3.12.0",
+    "react-native-swiper": "^1.6.0",
     "react-native-switch": "^1.5.1",
+    "react-native-toast-message": "^2.1.1",
     "react-query": "^3.34.16",
     "react-redux": "^7.2.6",
     "redux-logger": "^3.0.6",
