--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
     "@types/redux-logger": "^3.0.9",
     "axios": "^0.25.0",
     "hex-to-rgba": "^2.0.1",
+    "i18next": "^21.6.12",
     "react": "17.0.2",
     "react-hook-form": "^7.27.1",
+    "react-i18next": "^11.15.5",
     "react-native": "0.67.2",
     "react-native-dotenv": "^3.3.1",
     "react-native-gesture-handler": "^2.2.0",
+    "react-native-localize": "^2.2.0",
     "react-native-maps": "0.30.1",
     "react-native-reanimated": "^2.4.1",
     "react-native-safe-area-context": "^3.4.1",
