--- a/.eslintrc
+++ b/.eslintrc
@@ -12,7 +12,8 @@
   "plugins": [
     "react",
     "react-native",
-    "prettier"
+    "prettier",
+    "eslint-plugin-import"
   ],
   "parserOptions": {
     "sourceType": "module",
@@ -25,5 +26,28 @@
     "react": {
       "version": "detect"
     }
+  },
+  "rules": {
+    "sort-imports": [
+      "error",
+      {
+        "ignoreCase": true,
+        "ignoreDeclarationSort": true,
+        "allowSeparatedGroups": true
+      }
+    ],
+    "import/order": [
+      "error",
+      {
+        "groups": [
+          "external",
+          "builtin",
+          "internal",
+          "sibling",
+          "parent",
+          "index"
+        ]
+      }
+    ]
   }
 }
