--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "babel-plugin-module-resolver": "^4.1.0",
     "eslint": "^8.8.0",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-native": "^4.0.0",
