--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-gesture-handler": "^2.2.0",
     "react-native-localize": "^2.2.0",
     "react-native-maps": "0.30.1",
+    "react-native-onesignal": "^4.3.7",
     "react-native-reanimated": "^2.4.1",
     "react-native-safe-area-context": "^3.4.1",
     "react-native-safe-area-view": "^1.1.1",
