--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -26,3 +26,8 @@ android.enableJetifier=true
 
 # Version of flipper SDK to use with React Native
 FLIPPER_VERSION=0.99.0
+
+RELEASE_STORE_FILE=my-upload-key.keystore
+RELEASE_KEY_ALIAS=my-key-alias
+RELEASE_STORE_PASSWORD=heritage
+RELEASE_KEY_PASSWORD=heritage
