--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "redesign",
+  "name": "heritage_4_life",
   "version": "0.0.1",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
+    "ios-m1": "arch -x86_64 react-native run-ios",
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
