Pod file update

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -3,8 +3,7 @@ require_relative '../node_modules/@react-native-community/cli-platform-ios/nativ
 
 platform :ios, '11.0'
 
-target 'redesign' do
-
+target 'heritage_4_life' do
   rn_maps_path = '../node_modules/react-native-maps'
   pod 'react-native-google-maps', :path => rn_maps_path
 
@@ -16,7 +15,7 @@ target 'redesign' do
     :hermes_enabled => false
   )
 
-  target 'redesignTests' do
+  target 'heritage_4_lifeTests' do
     inherit! :complete
     # Pods for testing
   end
