--- a/ios/heritage_4_life/Info.plist
+++ b/ios/heritage_4_life/Info.plist
@@ -5,11 +5,11 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-  <string>Heritage 4 Life</string>
+	<string>Heritage 4 Life</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIconName</key>
-  <string>AppIcon</string>
+	<string>AppIcon</string>
 	<key>CFBundleIdentifier</key>
 	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
 	<key>CFBundleInfoDictionaryVersion</key>
@@ -25,12 +25,13 @@
 	<key>CFBundleVersion</key>
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
+	<true/>
 	<key>NSAllowsArbitraryLoads</key>
-  <false/>
-  <key>NSLocationAlwaysUsageDescription</key>
-  <string>Your location is required for possibility to show near places to you</string>
-  <key>NSLocationWhenInUseUsageDescription</key>
-  <string>Your location is required for possibility to show near places to you</string>
+	<false/>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Your location is required for possibility to show near places to you</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Your location is required for possibility to show near places to you</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
