--- a/ios/Podfile
+++ b/ios/Podfile
@@ -31,3 +31,7 @@ target 'heritage_4_life' do
     __apply_Xcode_12_5_M1_post_install_workaround(installer)
   end
 end
+
+target 'OneSignalNotificationServiceExtension' do
+  pod 'OneSignalXCFramework', '>= 3.0', '< 4.0'
+end
