--- a/ios/heritage_4_life/heritage_4_life.entitlements
+++ b/ios/heritage_4_life/heritage_4_life.entitlements
@@ -6,7 +6,7 @@
 	<string>development</string>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.lt.imas.heritage-4-life</string>
+		<string>group.lt.imas.heritage-4-life.onesignal</string>
 	</array>
 </dict>
 </plist>
