--- a/package.json
+++ b/package.json
@@ -10,23 +10,26 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
-    "react": "17.0.2",
-    "react-native": "0.67.3",
     "@fawazahmed/react-native-read-more": "^2.3.3",
+    "@gorhom/bottom-sheet": "^4.1.5",
     "@hookform/resolvers": "^2.8.8",
     "@react-native-async-storage/async-storage": "^1.16.1",
+    "@react-native-community/geolocation": "^2.0.2",
     "@react-navigation/drawer": "^6.3.1",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/stack": "^6.1.1",
     "@reduxjs/toolkit": "^1.7.2",
     "@types/redux-logger": "^3.0.9",
     "axios": "^0.25.0",
+    "geolib": "^3.3.3",
     "hex-to-rgba": "^2.0.1",
     "i18next": "^21.6.12",
+    "react": "17.0.2",
     "react-hook-form": "^7.27.1",
     "react-i18next": "^11.15.5",
+    "react-native": "0.67.3",
     "react-native-dotenv": "^3.3.1",
-    "react-native-gesture-handler": "^2.2.0",
+    "react-native-gesture-handler": "^2.3.1",
     "react-native-localize": "^2.2.0",
     "react-native-maps": "0.30.1",
     "react-native-onesignal": "^4.3.7",
