--- a/ios/Podfile
+++ b/ios/Podfile
@@ -15,6 +15,8 @@ target 'heritage_4_life' do
     :hermes_enabled => false
   )
 
+  pod 'react-native-splash-screen', :path => '../node_modules/react-native-splash-screen'
+
   target 'heritage_4_lifeTests' do
     inherit! :complete
     # Pods for testing
