--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-native-safe-area-context": "^3.4.1",
     "react-native-safe-area-view": "^1.1.1",
     "react-native-screens": "^3.12.0",
+    "react-native-splash-screen": "^3.3.0",
     "react-native-swiper": "^1.6.0",
     "react-native-switch": "^1.5.1",
     "react-native-toast-message": "^2.1.1",
