--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -12,6 +12,17 @@
             android:allowBackup="false"
             android:theme="@style/AppTheme"
             android:screenOrientation="portrait">
+
+        <activity
+                android:name=".SplashActivity"
+                android:theme="@style/SplashTheme"
+                android:label="@string/app_name">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
         <meta-data
                 android:name="com.google.android.geo.API_KEY"
                 android:value="AIzaSyCEkBZYaO2jMCuPF00QsIkmpyNbKcILS-k"/>
@@ -23,11 +34,8 @@
                 android:label="@string/app_name"
                 android:configChanges="keyboard|keyboardHidden|orientation|screenSize|uiMode"
                 android:launchMode="singleTask"
-                android:windowSoftInputMode="adjustResize">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>
+                android:windowSoftInputMode="adjustResize"
+                android:exported="true">
         </activity>
     </application>
 </manifest>
